refactor alloc logic